2006-02-23  Callum McKenzie  <callum@spooky-possum.org>

	* games-network-dialog.c (connect_cb): server -> lan_server when
	we are using a local server. Daniel Haischt spotted this one.

2006-02-18  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores.c: 
	* games-scores-dialog.gob: Fixes to allow NULL categories to work
	as desired. This includes adding a dummy category for use when we
	want an anonymous category. Should fix bug #331613.

2006-02-15  Callum McKenzie  <callum@spooky-possum.org>

	* games-setgid-io.c: #include <stdlib.h> for exit ()

2006-02-12  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores.c: Remove the default "" category in favour of a
	NULL category. Sprinkle warnings around to make sure we do the
	right thing. This should fix bug #330401. The alternative of
	deliberately ignoring a "" category was rejected on the grounds
	that it would take more code and wasn't going to give warnings
	about buggy code on the client end.

2006-02-05  Callum McKenzie  <callum@spooky-possum.org>

	* games-network-dialog.c (network_game_dialog_show):
	Identification label wasn't being translated. Spotted by Funda
	Wang (bug #329972).

2006-01-25  Callum McKenzie  <callum@spooky-possum.org>

	* games-controls.c (games_controls_list_add_control): Simplify the
	schema-reading code and make it more robust. We get the entry
	directly from the GConfClient now.

2006-01-16  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores-dialog.gob: Make sure only the new row in the high
	scores dialog is editable.

2006-01-15  Callum McKenzie  <callum@spooky-possum.org>

	* games-scores-dialog.gob: Allow the name to be set when a high
	score has been set. This should qualify for fixing bug #315442.

	* games-scores.h: 
	* games-scores.c: Add games_scores_update_score as a hack to let
	us set the name after the fact. i.e. out of the
	games_scores_dialog. While it is a public interface, no one should
	use it without very good reasons.

	* games-score.c: