@@ -1,3 +1,9 @@
+2006-03-02  Callum McKenzie  <callum@spooky-possum.org>
+
+	* games-scores-dialog.gob: Try and set editable after the window
+	is fully up so that the editing subwindow appears on the right
+	place. This is a bit of a hack.
+
 2006-02-23  Callum McKenzie  <callum@spooky-possum.org>
 
 	* games-network-dialog.c (connect_cb): server -> lan_server when
